# PaySure-Escrow-Platform

./: .gitignore  README.md
backend/: .env.example  check_startup.py  conftest.py  fix_roles.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 4d7e8bb217ab_add_messages_and_ratings_tables.py  764af9beae2d_add_phone_and_is_onboarded.py  a1b2c3d4e5f6_add_wallet_tables.py  b2c3d4e5f6a7_add_applications_table.py  e592f87855d5_make_freelancer_id_nullable.py  e9819e7a4f9f_add_resolved_to_dispute_status_enum.py  f1fb32045cbc_initial_tables.py
backend/api/: index.py
backend/app/: main.py
backend/app/api/v1/: admin.py  applications.py  chat_ws.py  disputes.py  escrow.py  invoices.py  messages.py  milestones.py  payments.py  pusher_auth.py  ratings.py  routes.py  users.py  wallet.py  webhook.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  application.py  dispute.py  escrow.py  invoice.py  message.py  milestone.py  payment.py  rating.py  user.py  wallet.py
backend/app/schemas/: __init__.py  application.py  dashboard.py  dispute.py  escrow.py  invoice.py  message.py  milestone.py  payment.py  rating.py  user.py  wallet.py
backend/app/services/: __init__.py  application_service.py  dashboard_service.py  dispute_service.py  email_service.py  escrow_service.py  invoice_service.py  message_service.py  milestone_service.py  payment_service.py  pusher_service.py  rating_service.py  user_service.py  wallet_service.py  webhook_service.py  websocket_manager.py
backend/app/utils/: __init__.py  exceptions.py  response.py
backend/tests/: test_auth.py  test_disputes.py  test_escrow.py  test_health.py  test_invoices.py  test_milestones.py  test_payments.py  test_users.py
frontend/: index.html  package-lock.json  package.json  refactor_colors.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: dotted-surface.jsx
frontend/src/components/layout/: AppShell.jsx  Sidebar.jsx
frontend/src/components/ui/: GooeyNav.jsx  InvoiceCard.jsx  SuspenseLoader.jsx  UserAvatarDropdown.jsx  etheral-shadow.jsx  minimal-dock.jsx
frontend/src/config/: navigation.js
frontend/src/context/: UserContext.jsx
frontend/src/features/dashboard/components/: ClientPanel.jsx  DashboardShared.jsx  FreelancerPanel.jsx
frontend/src/hooks/: usePusherChat.js  useWebSocketChat.js
frontend/src/lib/: api.js  auth.jsx
frontend/src/pages/: AdminPage.jsx  CreateInvoicePage.jsx  DashboardPage.jsx  DisputesPage.jsx  InvoiceDetailPage.jsx  InvoicesPage.jsx  LandingPage.jsx  LoginPage.jsx  OnboardingPage.jsx  PaymentsPage.jsx  WalletPage.jsx
frontend/src/styles/: globals.css
