[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paysure-backend"
version = "1.0.0"
description = "Milestone-Based Escrow Payment Protection Platform"
authors = [
    { name = "Saurabh Singh", email = "s24cseu0487@bennett.edu.in" },
    { name = "Krishna Gaur", email = "s24cseu0659@bennett.edu.in" },
]
requires-python = ">=3.13"
license = "MIT"
dependencies = [
    "alembic==1.18.4",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "bcrypt==5.0.0",
    "cffi==2.0.0",
    "click==8.3.1",
    "colorama==0.4.6",
    "cryptography==46.0.5",
    "dnspython==2.8.0",
    "ecdsa==0.19.1",
    "email-validator==2.3.0",
    "fastapi==0.129.0",
    "greenlet==3.3.2",
    "h11==0.16.0",
    "httptools==0.7.1",
    "idna==3.11",
    "iniconfig==2.3.0",
    "Mako==1.3.10",
    "MarkupSafe==3.0.3",
    "mangum==0.19.0",
    "mypy_extensions==1.1.0",
    "packaging==26.0",
    "passlib==1.7.4",
    "pathspec==1.0.4",
    "platformdirs==4.9.2",
    "pluggy==1.6.0",
    "psycopg2-binary==2.9.11",
    "pyasn1==0.6.2",
    "pycparser==3.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "pydantic_core==2.41.5",
    "Pygments==2.19.2",
    "pusher==3.3.2",
    "pytest==9.0.2",
    "python-dotenv==1.2.1",
    "python-jose==3.5.0",
    "python-multipart==0.0.20",
    "pytokens==0.4.1",
    "PyYAML==6.0.3",
    "rsa==4.9.1",
    "six==1.17.0",
    "SQLAlchemy==2.0.46",
    "starlette==0.52.1",
    "typing-inspection==0.4.2",
    "typing_extensions==4.15.0",
    "uvicorn==0.41.0",
    "watchfiles==1.1.1",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
# Tells pytest where to find tests and sets async mode
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.black]
# Black code formatter settings
line-length = 88
target-version = ["py313"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | alembic/versions
)/
'''

[tool.isort]
# Import sorting compatible with Black
profile = "black"
line_length = 88
skip = ["alembic/versions", "venv", ".venv"]

[tool.mypy]
# Type checking settings
python_version = "3.13"
ignore_missing_imports = true
warn_return_any = false
warn_unused_configs = true
exclude = ["alembic/", "venv/"]